--- a/src/components/CSS/header.css
+++ b/src/components/CSS/header.css
@@ -7,7 +7,7 @@
 }
 
 .navbar {
-    background: linear-gradient(45deg, #7d7c7c, #0a0a0a);
+    background: linear-gradient(45deg, #656464, #080808);
     border-bottom: 3px solid #474447;
 }
 
